# pencilblog

./: db.sqlite3  pyproject.toml  requirements.txt
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_tags.py  0003_post_body.py  0004_post_body_editorjs.py  0005_auto_20230212_0508.py  0006_remove_post_content.py  0007_post_body_editorjs_text.py  0008_remove_post_body_editorjs_text.py  0009_alter_post_body_editorjs_custom.py  0010_comment.py  0011_alter_comment_comment.py  0012_alter_comment_comment.py  0013_alter_comment_comment.py  0014_auto_20230219_1416.py  0015_auto_20230219_1429.py  0016_post_summary.py  0017_alter_post_summary.py  0018_post_body_froala.py  0019_remove_post_body_froala.py  0020_post_body_quill.py
blog/templates/: about.html  archives.html  base.html  blog.html  changelog.html  delete.html  demo.html  footer.html  header.html  home.html  index.html  new.html  preloader.html  search.html  sidebar.html  single (old).html  single.html  tagged.html
django_project/: settings.py  urls.py
loginapp/: forms.py  urls.py  views.py
loginapp/templates/: login.html  signup.html
static/css/: base.css  main.css
static/css/compressed/: base.min.css  main.min.css
